fix perimeter collapse

--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,6 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center top;
-	overflow: hidden;
 }
 
 a:link{
@@ -32,7 +31,6 @@ a:hover{
 a:active{
 	text-decoration:none;
 }
-
 
 #profile{
 	display: flex;
